--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2880,8 +2880,8 @@ left: 15px;
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1>AMG</h1>
-<div id="amg-31-julio-2024" class="section level3" data-height="100">
-<h3>AMG, 31 julio, 2024</h3>
+<div id="amg-01-agosto-2024" class="section level3" data-height="100">
+<h3>AMG, 01 agosto, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2905,7 +2905,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.69
+25.68
 </td>
 </tr>
 <tr>
@@ -2916,7 +2916,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-26.08
+26.09
 </td>
 </tr>
 <tr>
@@ -2927,18 +2927,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.61
+24.63
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-07-31 07:36:32</p>
+<p>Última actualización: 2024-08-01 07:30:15</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1>El Salto</h1>
-<div id="el-salto-31-julio-2024" class="section level3" data-height="100">
-<h3>El Salto, 31 julio, 2024</h3>
+<div id="el-salto-01-agosto-2024" class="section level3" data-height="100">
+<h3>El Salto, 01 agosto, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2962,7 +2962,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-26.05
+26.02
 </td>
 </tr>
 <tr>
@@ -2989,13 +2989,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-07-31 07:36:35</p>
+<p>Última actualización: 2024-08-01 07:30:15</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1>Guadalajara</h1>
-<div id="guadalajara-31-julio-2024" class="section level3" data-height="100">
-<h3>Guadalajara, 31 julio, 2024</h3>
+<div id="guadalajara-01-agosto-2024" class="section level3" data-height="100">
+<h3>Guadalajara, 01 agosto, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3030,7 +3030,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-26.15
+26.16
 </td>
 </tr>
 <tr>
@@ -3041,18 +3041,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.65
+24.69
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-07-31 07:36:38</p>
+<p>Última actualización: 2024-08-01 07:30:15</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlajomulco</h1>
-<div id="tlajomulco-31-julio-2024" class="section level3" data-height="100">
-<h3>Tlajomulco, 31 julio, 2024</h3>
+<div id="tlajomulco-01-agosto-2024" class="section level3" data-height="100">
+<h3>Tlajomulco, 01 agosto, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3076,7 +3076,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.49
+25.52
 </td>
 </tr>
 <tr>
@@ -3087,7 +3087,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.82
+25.85
 </td>
 </tr>
 <tr>
@@ -3098,18 +3098,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.39
+24.41
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-07-31 07:36:40</p>
+<p>Última actualización: 2024-08-01 07:30:15</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlaquepaque</h1>
-<div id="tlaquepaque-31-julio-2024" class="section level3" data-height="100">
-<h3>Tlaquepaque, 31 julio, 2024</h3>
+<div id="tlaquepaque-01-agosto-2024" class="section level3" data-height="100">
+<h3>Tlaquepaque, 01 agosto, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3144,7 +3144,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-26.13
+26.14
 </td>
 </tr>
 <tr>
@@ -3160,13 +3160,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-07-31 07:36:43</p>
+<p>Última actualización: 2024-08-01 07:30:15</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tonalá</h1>
-<div id="tonalá-31-julio-2024" class="section level3" data-height="100">
-<h3>Tonalá, 31 julio, 2024</h3>
+<div id="tonalá-01-agosto-2024" class="section level3" data-height="100">
+<h3>Tonalá, 01 agosto, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3190,7 +3190,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.69
+25.63
 </td>
 </tr>
 <tr>
@@ -3217,13 +3217,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-07-31 07:36:46</p>
+<p>Última actualización: 2024-08-01 07:30:15</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1>Zapopan</h1>
-<div id="zapopan-31-julio-2024" class="section level3" data-height="100">
-<h3>Zapopan, 31 julio, 2024</h3>
+<div id="zapopan-01-agosto-2024" class="section level3" data-height="100">
+<h3>Zapopan, 01 agosto, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3247,7 +3247,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.69
+25.67
 </td>
 </tr>
 <tr>
@@ -3258,7 +3258,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-26.17
+26.18
 </td>
 </tr>
 <tr>
@@ -3269,12 +3269,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.65
+24.67
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-07-31 07:36:48</p>
+<p>Última actualización: 2024-08-01 07:30:15</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
