--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2880,8 +2880,8 @@ left: 15px;
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1>AMG</h1>
-<div id="amg-30-septiembre-2024" class="section level3" data-height="100">
-<h3>AMG, 30 septiembre, 2024</h3>
+<div id="amg-01-octubre-2024" class="section level3" data-height="100">
+<h3>AMG, 01 octubre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2905,7 +2905,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.54
+25.53
 </td>
 </tr>
 <tr>
@@ -2927,18 +2927,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.50
+24.49
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-09-30 07:37:42</p>
+<p>Última actualización: 2024-10-01 07:30:19</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1>El Salto</h1>
-<div id="el-salto-30-septiembre-2024" class="section level3" data-height="100">
-<h3>El Salto, 30 septiembre, 2024</h3>
+<div id="el-salto-01-octubre-2024" class="section level3" data-height="100">
+<h3>El Salto, 01 octubre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2989,13 +2989,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-09-30 07:37:42</p>
+<p>Última actualización: 2024-10-01 07:30:19</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1>Guadalajara</h1>
-<div id="guadalajara-30-septiembre-2024" class="section level3" data-height="100">
-<h3>Guadalajara, 30 septiembre, 2024</h3>
+<div id="guadalajara-01-octubre-2024" class="section level3" data-height="100">
+<h3>Guadalajara, 01 octubre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3030,7 +3030,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.97
+25.96
 </td>
 </tr>
 <tr>
@@ -3041,18 +3041,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.51
+24.50
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-09-30 07:37:42</p>
+<p>Última actualización: 2024-10-01 07:30:19</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlajomulco</h1>
-<div id="tlajomulco-30-septiembre-2024" class="section level3" data-height="100">
-<h3>Tlajomulco, 30 septiembre, 2024</h3>
+<div id="tlajomulco-01-octubre-2024" class="section level3" data-height="100">
+<h3>Tlajomulco, 01 octubre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3103,13 +3103,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-09-30 07:37:42</p>
+<p>Última actualización: 2024-10-01 07:30:19</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlaquepaque</h1>
-<div id="tlaquepaque-30-septiembre-2024" class="section level3" data-height="100">
-<h3>Tlaquepaque, 30 septiembre, 2024</h3>
+<div id="tlaquepaque-01-octubre-2024" class="section level3" data-height="100">
+<h3>Tlaquepaque, 01 octubre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3160,13 +3160,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-09-30 07:37:42</p>
+<p>Última actualización: 2024-10-01 07:30:19</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tonalá</h1>
-<div id="tonalá-30-septiembre-2024" class="section level3" data-height="100">
-<h3>Tonalá, 30 septiembre, 2024</h3>
+<div id="tonalá-01-octubre-2024" class="section level3" data-height="100">
+<h3>Tonalá, 01 octubre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3190,7 +3190,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.61
+25.59
 </td>
 </tr>
 <tr>
@@ -3217,13 +3217,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-09-30 07:37:42</p>
+<p>Última actualización: 2024-10-01 07:30:19</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1>Zapopan</h1>
-<div id="zapopan-30-septiembre-2024" class="section level3" data-height="100">
-<h3>Zapopan, 30 septiembre, 2024</h3>
+<div id="zapopan-01-octubre-2024" class="section level3" data-height="100">
+<h3>Zapopan, 01 octubre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3247,7 +3247,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.50
+25.48
 </td>
 </tr>
 <tr>
@@ -3258,7 +3258,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.95
+25.94
 </td>
 </tr>
 <tr>
@@ -3269,12 +3269,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.53
+24.52
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-09-30 07:37:42</p>
+<p>Última actualización: 2024-10-01 07:30:19</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
