--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2880,8 +2880,8 @@ left: 15px;
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1>AMG</h1>
-<div id="amg-30-noviembre-2024" class="section level3" data-height="100">
-<h3>AMG, 30 noviembre, 2024</h3>
+<div id="amg-01-diciembre-2024" class="section level3" data-height="100">
+<h3>AMG, 01 diciembre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2916,7 +2916,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.77
+25.76
 </td>
 </tr>
 <tr>
@@ -2927,18 +2927,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.03
+24.02
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-11-30 06:30:10</p>
+<p>Última actualización: 2024-12-01 06:30:13</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1>El Salto</h1>
-<div id="el-salto-30-noviembre-2024" class="section level3" data-height="100">
-<h3>El Salto, 30 noviembre, 2024</h3>
+<div id="el-salto-01-diciembre-2024" class="section level3" data-height="100">
+<h3>El Salto, 01 diciembre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2989,13 +2989,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-11-30 06:30:10</p>
+<p>Última actualización: 2024-12-01 06:30:13</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1>Guadalajara</h1>
-<div id="guadalajara-30-noviembre-2024" class="section level3" data-height="100">
-<h3>Guadalajara, 30 noviembre, 2024</h3>
+<div id="guadalajara-01-diciembre-2024" class="section level3" data-height="100">
+<h3>Guadalajara, 01 diciembre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3041,18 +3041,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.09
+24.10
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-11-30 06:30:10</p>
+<p>Última actualización: 2024-12-01 06:30:13</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlajomulco</h1>
-<div id="tlajomulco-30-noviembre-2024" class="section level3" data-height="100">
-<h3>Tlajomulco, 30 noviembre, 2024</h3>
+<div id="tlajomulco-01-diciembre-2024" class="section level3" data-height="100">
+<h3>Tlajomulco, 01 diciembre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3076,7 +3076,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.02
+25.01
 </td>
 </tr>
 <tr>
@@ -3087,7 +3087,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.57
+25.56
 </td>
 </tr>
 <tr>
@@ -3098,18 +3098,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-23.83
+23.80
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-11-30 06:30:10</p>
+<p>Última actualización: 2024-12-01 06:30:13</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlaquepaque</h1>
-<div id="tlaquepaque-30-noviembre-2024" class="section level3" data-height="100">
-<h3>Tlaquepaque, 30 noviembre, 2024</h3>
+<div id="tlaquepaque-01-diciembre-2024" class="section level3" data-height="100">
+<h3>Tlaquepaque, 01 diciembre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3155,18 +3155,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-23.90
+23.91
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-11-30 06:30:10</p>
+<p>Última actualización: 2024-12-01 06:30:13</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tonalá</h1>
-<div id="tonalá-30-noviembre-2024" class="section level3" data-height="100">
-<h3>Tonalá, 30 noviembre, 2024</h3>
+<div id="tonalá-01-diciembre-2024" class="section level3" data-height="100">
+<h3>Tonalá, 01 diciembre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3190,7 +3190,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-25.45
+25.41
 </td>
 </tr>
 <tr>
@@ -3201,7 +3201,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.60
+25.59
 </td>
 </tr>
 <tr>
@@ -3217,13 +3217,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-11-30 06:30:10</p>
+<p>Última actualización: 2024-12-01 06:30:13</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1>Zapopan</h1>
-<div id="zapopan-30-noviembre-2024" class="section level3" data-height="100">
-<h3>Zapopan, 30 noviembre, 2024</h3>
+<div id="zapopan-01-diciembre-2024" class="section level3" data-height="100">
+<h3>Zapopan, 01 diciembre, 2024</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3258,7 +3258,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-25.80
+25.79
 </td>
 </tr>
 <tr>
@@ -3269,12 +3269,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-24.07
+24.05
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2024-11-30 06:30:10</p>
+<p>Última actualización: 2024-12-01 06:30:13</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
